--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,13 @@
     <img id="video" src="" alt="Video stream not available">
     
     <script>
+        const videoElement = document.getElementById('video');
+        const websocket = null;
         const setupFn = function setup() {
-            const videoElement = document.getElementById('video');
-            const websocket = new WebSocket('ws://192.168.0.124:8765');
+            
+            if (websocket) { websocket.close(); }
+
+            websocket = new WebSocket('ws://192.168.0.124:8765');
             let imageBuffer = [];
             
             websocket.binaryType = 'blob';
