--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,7 @@
         const onCrashDelay = 2000;
         const websocketUrl = 'ws://192.168.0.124:8765';
         const webSocketsSetup = function () {
-            if (websocket) {
-                websocket.close(); 
+            if (websocket === null) {
                 websocket.onclose = function() {
                     console.log('Previous WebSocket connection closed.');
                     setTimeout(init, onCrashDelay);
@@ -25,6 +24,7 @@
                 websocket.onopen = function () {
                     console.log('WebSocket connection established.');
                 };
+                websocket.close(); 
             } else {
                 setTimeout(init, onCrashDelay);
             }
@@ -39,7 +39,7 @@
                     const blob = new Blob(imageBuffer, { type: 'image/jpeg' });
                     const url = URL.createObjectURL(blob);
                     const videoUrlTimout = setTimeout(() => videoElement.src = url, 500);
-                    const revokeObjectURLTimout = setTimeout(() => URL.revokeObjectURL(url), 1000);
+                    const revokeObjectURLTimout = setTimeout(() => URL.revokeObjectURL(url), 10000);
                 }
             };
             websocket.onerror = function(error) {
