--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                 console.log('WebSocket connection closed. Reconnecting...');
                 if (rebootTimer) { clearTimeout(rebootTimer); }
                 rebootTimer = setTimeout(() => initWebSocket(
-                    ideoElement, websocketUrl, websocket, revokeTimer, onCloseTimer, myrevoke), 10000);
+                    videoElement, websocketUrl, websocket, revokeTimer, onCloseTimer, myrevoke), 10000);
             };
         })(videoElement, websocketUrl, websocket, revokeTimer, rebootTimer, myrevoke);
 
