--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
                 rebootTimer = setTimeout(() => { initWebSocket(); }, 10000);
             };
         };
-
+        initWebSocket();
     </script>
 </body>
 </html>
